2002-10-29  Jody Goldberg <jody@gnome.org>

	Patch from Christophe Fergeau <teuf@users.sourceforge.net>
	* libgnomevfs/gnome-vfs-file-info.h :  Add explicit flags to request
	  permissioning.
	* modules/file-method.c (get_access_info) : new.
	* modules/ssh-method.c (get_access_info) : new.
	* test/test-info.c (print_file_info) :  test for the new flag.

2002-10-29  Michael Meeks  <michael@ximian.com>

	* libgnomevfs/gnome-vfs-module-callback.c
	(copy_one_callback): bin so we can build -Wall
	cleanly again.

2002-10-29  Colin Walters <walters@debian.org>

	* test/test-xfer.c: add params so we can regression
	  test the various options nicely.

	* libgnomevfs/gnome-vfs-xfer.h (GnomeVFSXferOptions):
	  add GNOME_VFS_XFER_FOLLOW_LINKS_RECURSIVE.

	* libgnomevfs/gnome-vfs-xfer.c (copy_directory): add
	  recursive symlink following copy support.

2002-10-25  Alex Graveley  <alex@ximian.com>

	Drop support for the broken .vfolder-info-default concept.

	* modules/vfolder/Makefile.am (EXTRA_DIST): Remove
	applications.vfolder-info-default.in and
	preferences.vfolder-info-default.in
	(vfolder_DATA): Remove applications.vfolder-info-default and
	preferences.vfolder-info-default.

	* modules/vfolder/applications-all-users.vfolder-info.in: Link to
	preferences:/// instead of preferences-all-users:///.  If admins
	want to edit preferences-all-users:, they should go there
	directly.

	* modules/vfolder/vfolder-info.c (vfolder_info_find_filenames):
	Don't look for .vfolder-info-default, and don't copy it to the
	user's vfolder directory.
	(copy_user_default_file): Remove.
	(vfolder_info_init): Set the default writedir to
	~/.gnome2/vfolders/scheme, in case a .vfolder-info files doesn't
	exist to tell us where to write changes.

2002-10-25  Alex Graveley  <alex@ximian.com>

	* libgnomevfs/gnome-vfs-uri.c (gnome_vfs_uri_new_private): Use
	gnome_vfs_context_peek_current() instead of
	gnome_vfs_context_new() which was triggering an abort if resolving