@@ -41,6 +41,7 @@ preferences:            libvfolder-desktop.so
 preferences-all-users:  libvfolder-desktop.so
 all-preferences:        libvfolder-desktop.so
 favorites:              libvfolder-desktop.so
+network:                libvfolder-desktop.so
 start-here:             libvfolder-desktop.so
 system-settings:        libvfolder-desktop.so
 server-settings:        libvfolder-desktop.so
